<resources>
    <string name="app_name">uCurate</string>
    <string name="title_activity_drop_pins">Map</string>
    <string name="tour">Tour</string>
    <string name="start_tour">Start Tour</string>
    <string name="description">Description</string>
    <string name="num_stops">5 stops</string>
    <string name="distance">2.5 miles</string>
    <string name="title_activity_create_tour">CreateTour</string>
    <string name="search_hint">Search Tours</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
